--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -57,7 +57,7 @@ jobs:
       
       - name: Configure Kubectl
         run: |
-          aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name eks-tc3-g38-lanchonete
+          aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name eks-tc5-g192-athena
           echo "Kubeconfig configured successfully!"
 
       - name: Deploy NGINX Ingress Controller
@@ -70,7 +70,7 @@ jobs:
       - name: Save Terraform State
         run: |
           echo "Infrastructure deployed successfully!"
-          echo "EKS Cluster: eks-tc3-g38-lanchonete"
+          echo "EKS Cluster: eks-tc5-g192-athena"
           echo "Region: ${{ env.AWS_REGION }}"
 
   terraform-destroy:
